@@ -118,7 +118,7 @@
             <AppenderRef ref="Console"/>
         </Root>
         <!-- daily -->
-        <Logger name="summary" level="debug" additivity="false">
+        <Logger name="status" level="debug" additivity="false">
             <AppenderRef ref="status" level="info"/>
             <AppenderRef ref="summary" level="info"/><!-- human readable -->
             <AppenderRef ref="detail"/>
